crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__underscorecap.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Timmy",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Linda",
            "role": "Investigator",
            "speaker_code": "LIN"
          },
          {
            "name": "Winnie",
            "role": "Investigator",
            "speaker_code": "WIN"
          },
          {
            "name": "Gemma",
            "role": "Speaker",
            "speaker_code": "GEM"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;09.08",
        "corpus": "timmy",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LIN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "WIN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Speaker",
        "speaker": "GEM",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "location": "TI060 (side A)",
        "type": "tape_location"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "29-FEB-1996",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "duration": "17:30-18:00",
        "type": "time_duration"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "span": {
                "end": 378,
                "start": 377
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "am",
                  "type": "text"
                }
              ],
              "raw_text": "am",
              "span": {
                "end": 381,
                "start": 379
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "now",
                  "type": "text"
                }
              ],
              "raw_text": "now",
              "span": {
                "end": 385,
                "start": 382
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "allowing",
                  "type": "text"
                }
              ],
              "raw_text": "allowing",
              "span": {
                "end": 394,
                "start": 386
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "Mary_Had_A_Little_Lamb",
                  "type": "text"
                }
              ],
              "raw_text": "Mary_Had_A_Little_Lamb",
              "span": {
                "end": 417,
                "start": 395
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "underscores",
                  "type": "text"
                }
              ],
              "raw_text": "underscores",
              "span": {
                "end": 429,
                "start": 418
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;09.08",
        "corpus": "timmy",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": "Timmy",
      "role": "Target_Child"
    },
    "GEM": {
      "birth_date": null,
      "code": "GEM",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Speaker",
        "speaker": "GEM"
      },
      "name": "Gemma",
      "role": "Speaker"
    },
    "LIN": {
      "birth_date": null,
      "code": "LIN",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LIN"
      },
      "name": "Linda",
      "role": "Investigator"
    },
    "WIN": {
      "birth_date": null,
      "code": "WIN",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "WIN"
      },
      "name": "Winnie",
      "role": "Investigator"
    }
  }
}
