crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__unibet.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "geometry": "263_127_668_685_-1_-1_420_0_420_0",
        "type": "window"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Timmy",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Linda",
            "role": "Investigator",
            "speaker_code": "LIN"
          },
          {
            "name": "Winnie",
            "role": "Investigator",
            "speaker_code": "WIN"
          },
          {
            "name": "Gemma",
            "role": "Speaker",
            "speaker_code": "GEM"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;09.08",
        "corpus": "timmy",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LIN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "WIN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Speaker",
        "speaker": "GEM",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "location": "TI060 (side A)",
        "type": "tape_location"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "29-FEB-1996",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "duration": "17:30-18:00",
        "type": "time_duration"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 422,
                      "start": 421
                    }
                  },
                  "type": "syllable_pause"
                },
                {
                  "content": "bo",
                  "type": "text"
                }
              ],
              "form_type": "u",
              "raw_text": "a^bo@u",
              "span": {
                "end": 426,
                "start": 420
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "chatta",
                  "type": "text"
                }
              ],
              "raw_text": "chatta",
              "span": {
                "end": 433,
                "start": 427
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "hu",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 437,
                      "start": 436
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": "n",
                  "type": "text"
                }
              ],
              "form_type": "u",
              "raw_text": "hu:n@u",
              "span": {
                "end": 440,
                "start": 434
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "exclamation"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 450,
                "start": 449
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "softer",
                  "type": "text"
                }
              ],
              "form_type": "u",
              "raw_text": "softer@u",
              "scoped_annotations": [
                {
                  "type": "partialretracing"
                }
              ],
              "span": {
                "end": 459,
                "start": 451
              },
              "type": "annotated_word"
            },
            {
              "content": [
                {
                  "content": "soft",
                  "type": "text"
                }
              ],
              "raw_text": "soft",
              "span": {
                "end": 468,
                "start": 464
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 480,
                "start": 477
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "one",
                  "type": "text"
                }
              ],
              "raw_text": "one",
              "span": {
                "end": 484,
                "start": 481
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "that",
                  "type": "text"
                }
              ],
              "raw_text": "that",
              "span": {
                "end": 489,
                "start": 485
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "says",
                  "type": "text"
                }
              ],
              "raw_text": "says",
              "span": {
                "end": 494,
                "start": 490
              },
              "type": "word"
            },
            {
              "replacement": {
                "words": [
                  {
                    "content": [
                      {
                        "content": "Tigger",
                        "type": "text"
                      }
                    ],
                    "raw_text": "Tigger",
                    "span": {
                      "end": 518,
                      "start": 512
                    }
                  }
                ]
              },
              "type": "replaced_word",
              "word": {
                "content": [
                  {
                    "content": {
                      "marker_type": "primary",
                      "span": {
                        "end": 497,
                        "start": 495
                      }
                    },
                    "type": "stress_marker"
                  },
                  {
                    "content": "tɪgɜ˞r",
                    "type": "text"
                  }
                ],
                "form_type": "u",
                "raw_text": "ˈtɪgɜ˞r@u",
                "span": {
                  "end": 508,
                  "start": 495
                }
              }
            },
            {
              "content": [
                {
                  "content": "has",
                  "type": "text"
                }
              ],
              "raw_text": "has",
              "span": {
                "end": 523,
                "start": 520
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "breakfast",
                  "type": "text"
                }
              ],
              "raw_text": "breakfast",
              "span": {
                "end": 533,
                "start": 524
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;09.08",
        "corpus": "timmy",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": "Timmy",
      "role": "Target_Child"
    },
    "GEM": {
      "birth_date": null,
      "code": "GEM",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Speaker",
        "speaker": "GEM"
      },
      "name": "Gemma",
      "role": "Speaker"
    },
    "LIN": {
      "birth_date": null,
      "code": "LIN",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LIN"
      },
      "name": "Linda",
      "role": "Investigator"
    },
    "WIN": {
      "birth_date": null,
      "code": "WIN",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "WIN"
      },
      "name": "Winnie",
      "role": "Investigator"
    }
  }
}
